--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.15)
+cmake_minimum_required(VERSION 3.10)
 project(ve)
 
 set(CMAKE_CXX_STANDARD 14)
@@ -15,9 +15,9 @@ add_executable(ve
         )
 
 find_package(OpenGL REQUIRED)
-find_package(glfw3 3.3 REQUIRED)
+find_package(glfw3 3.2 REQUIRED)
 find_package(GLEW REQUIRED)
 
 target_link_libraries(ve OpenGL::GL)
 target_link_libraries(ve glfw)
-target_link_libraries(ve GLEW::glew)
+target_link_libraries(ve GLEW::GLEW)
